[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lash"
version = "0.1.0"
description = "Manifest-driven symlink installer. Reads lash.json and executes operations forward (install) or backward (uninstall), keeping them in sync."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "lash contributors" }]
requires-python = ">=3.10"
keywords = ["dotfiles", "installer", "symlink", "claude-code", "manifest"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Installation/Setup",
  "Topic :: System :: Software Distribution",
  "Topic :: Utilities",
]
dependencies = []  # zero deps — single-script tool

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
lash = "lash:main"

[project.urls]
Source = "https://github.com/johntrandall/lash"
Issues = "https://github.com/johntrandall/lash/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/lash"]

[tool.hatch.build.targets.sdist]
include = [
  "src/lash",
  "README.md",
  "LICENSE",
  "lash.json",
]
